<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pokedex</string>
    <string name="pokedex">Pokedex</string>
    <string name="pokemon">Pokemon</string>
    <string name="type">Type</string>
    <string name="description">Description</string>
    <string name="id">#000</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="with_cardview">with CardView</string>
    <string name="favorite">Favorite</string>
    <string name="share">Share</string>
    <string name="switch_layout">Switch Layout</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="abdurrasyid_muhasibi">Abdurrasyid Muhasibi</string>
    <string name="email">A1311651@bangkit.academy</string>
    <string name="about_me">
        Final year student at State Polytechnic of Malang majoring in Information Technology.\n
        Critical and innovative thinkers with achievements (team) as finalists at KMIPN 2019.\n
        Quite experienced in using SCRUM and code versioning tools like git in project management.\n
        Coders in codeforces. Enjoys writing code using C++, Java, and Kotlin programming languages.\n
        Hope to learn more, and get better every day :)</string>

    <string name="home">Home</string>
    <string name="about">About Me</string>
    <string name="open_in_browser">Open In Browser</string>
    <string name="detail_pokemon">Detail Pokemon</string>

</resources>