<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph.xml"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.pokedex.ui.HomeFragment"
        android:label="@string/app_name" >
        <action
            android:id="@+id/action_nav_home_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.pokedex.ui.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.example.pokedex.ui.DetailFragment"
        android:label="@string/detail_pokemon"
        tools:layout="@layout/fragment_detail">
        <argument
            android:name="selectedPokemon"
            app:argType="com.example.pokedex.model.Pokemon" />
    </fragment>
</navigation>